# SI-AIEP-paper

./: Manifest.toml  Project.toml  README.md  fitting_nn.jl  plot_concentration_predictions.py  plot_covariate_selection.py  plot_shap_results.py  pyproject.toml  shap_on_dcm.jl
checkpoints/: egb_acc.npy  egb_eff_wt.csv  egb_importance_scores.npy  lasso_acc.npy  lasso_coefs.npy  mars_acc.npy  mars_importance_scores_gcv.npy  mars_predictions.npy  rf_acc.npy  rf_importance_scores.npy
data/: result_dcm_test_rsme_1.596219679995113.csv  result_naive_test_rmse_1.4088933124862721.csv  simulation_Bjorkman_advante_SHL_500.csv  warfarin.csv
