[tool.poetry]
name = "SI-AIEP-paper"
version = "0.1.0"
description = ""
authors = ["Janssena <a.janssen@amsterdamumc.nl>"]

[tool.poetry.dependencies]
python = "3.8.*"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
numpy = "^1.21.5"
shap = "^0.40.0"
scikit-learn = "^1.0.2"
interpret = "^0.2.7"
sklearn-contrib-py-earth = { git = "https://github.com/scikit-learn-contrib/py-earth.git", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
